# cloudflare-discord-oidc-worker

./: .gitignore  Cargo.toml  README.md  renovate.json  wrangler.toml.template
.github/workflows/: rust.yml
src/: config.rs  error.rs  lib.rs
src/discord/: client.rs  models.rs
src/jwt/: claims.rs  mod.rs  signer.rs
src/routes/: authorize.rs  jwks.rs  mod.rs  token.rs
src/utils/: logging.rs
