[package]
name = "discord-oidc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
console_error_panic_hook = "0.1"
anyhow = "1.0"
jsonwebtoken = "9.1"
rand = { version = "0.9", features = ["default"] }
thiserror = "2.0.12"
log = "0.4.27"
base64-url = "3.0.0"
js-sys = "0"
sha2 = "0.11.0-pre.5"
hex = "0.4.3"

[dependencies.rsa]
version = "0.9"
features = ["pem"]
